<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="489dp"
        android:layout_height="785dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/acme"
        android:text="Registro "
        android:textColor="#DD97A8"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreId"
        android:layout_width="164dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/crushed"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColorHint="#454545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/apellidosId"
        android:layout_width="164dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/crushed"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColorHint="#404040"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/nombreId"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/passwordId"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edit_text"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/crushed"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:paddingLeft="15dp"
        android:textColorHint="#404040"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text"
        android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/crushed"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:textColorHint="#404040"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordId" />

    <EditText
        android:id="@+id/phoneId"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/crushed"
        android:hint="@string/num"
        android:inputType="phone"
        android:paddingLeft="15dp"
        android:textColorHint="#404040"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailId" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/crushed"
        android:text="Canción de mitski favorita"
        android:textColor="#404040"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneId" />

    <Button
        android:id="@+id/InicioId"
        android:layout_width="229dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:fontFamily="@font/crushed"
        android:text="@string/btn2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrateId" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="366dp"
        android:layout_height="62dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radBtn1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crushed"
            android:text="@string/rb1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radBtn2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crushed"
            android:text="@string/rb2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radBtn3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crushed"
            android:text="@string/rb3"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/crushed"
        android:text="Sexo:"
        android:textColor="#404040"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/crushed"
        android:text="@string/check2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toEndOf="@+id/check1"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/crushed"
        android:text="@string/check1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/crushed"
        android:text="@string/switch1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check2" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/crushed"
        android:text="@string/switch2"
        android:textColor="#404040"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/check2" />

    <Button
        android:id="@+id/registrateId"
        android:layout_width="229dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:fontFamily="@font/crushed"
        android:text="@string/btn1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

</androidx.constraintlayout.widget.ConstraintLayout>